--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,5 @@ JWT_SECRET=supersecretkey123
 PORT=5000
 ADMIN_EMAIL=admin@gmail.com
 ADMIN_PASSWORD=password
+PHARMACY_EMAIL=pharmacy@gmail.com
+PHARMACY_PASSWORD=yourPharmacyPass123
